# Matrix-Client

./: CMakeLists.txt  README.md  config.h.in
apps/: CMakeLists.txt  app-common.c  app-common.h  matrix-analogclock.c  matrix-blank.c  matrix-cairoexample.c  matrix-chess.c  matrix-circle.c  matrix-clock.c  matrix-fire.c  matrix-fullblink.c  matrix-grayscale.c  matrix-rain.c  matrix-scrolltext.c  matrix-template.c  matrix-zwickl.c
libmatrix/: CMakeLists.txt  drawing.c  drawing.h  font.c  font.h  graphics.c  graphics.h  matrix.c  matrix.h  matrix_ll.h  scroll.c  scroll.h  tools.c  tools.h
libmatrix/fonts/: font-AvantGarde-Book-20.c  font-courier-12.c  font-courier-15.c  font-courier-20.c
scripts/: gen-all-fonts.sh  genfon.sh  matrix-pic-url.sh  matrix-pic-webcam.sh
src/: drawing.c  drawing.h  graphics.c  graphics.h  main.c  matrix.c  matrix.h  tools.c
